--- a/quick_demo.ipynb
+++ b/quick_demo.ipynb
@@ -12,12 +12,13 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "GXaL7nU6TEsV"
       },
       "source": [
-        "# MakeItTalk Quick Demo (natural human face animation)\n",
+        "# Avy Quick Demo (natural human face animation)\n",
         "\n",
         "- included project setup + pretrained model download\n",
         "- provides step-by-step details\n",
@@ -254,8 +255,8 @@
         }
       ],
       "source": [
-        "%cd MakeItTalk/\n",
-        "!export PYTHONPATH=/content/MakeItTalk:$PYTHONPATH\n",
+        "%cd Avy/\n",
+        "!export PYTHONPATH=/content/Avy:$PYTHONPATH\n",
         "!pip install -r requirements.txt\n",
         "!pip install tensorboardX"
       ]
@@ -333,14 +334,15 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "37JeD3ZZdI-a"
       },
       "source": [
         "- prepare your images/audios (or you can use the existing ones)\n",
-        "  - An image to animate: upload to `MakeItTalk/examples` folder, image size should be 256x256\n",
-        "  - An audio (hopefully no noise) to talk: upload to `MakeItTalk/examples` folder as well\n",
+        "  - An image to animate: upload to `Avy/examples` folder, image size should be 256x256\n",
+        "  - An audio (hopefully no noise) to talk: upload to `Avy/examples` folder as well\n",
         "\n",
         "## Step 0: import necessary packages"
       ]
@@ -546,12 +548,13 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "FAcGrT3PhY3T"
       },
       "source": [
-        "## Step 3: Generate input data for inference based on uploaded audio `MakeItTalk/examples/*.wav`"
+        "## Step 3: Generate input data for inference based on uploaded audio `Avy/examples/*.wav`"
       ]
     },
     {
