--- a/quick_demo.ipynb
+++ b/quick_demo.ipynb
@@ -255,8 +255,8 @@
         }
       ],
       "source": [
-        "%cd Avy/\n",
-        "!export PYTHONPATH=/content/Avy:$PYTHONPATH\n",
+        "%cd avy/\n",
+        "!export PYTHONPATH=/content/avy:$PYTHONPATH\n",
         "!pip install -r requirements.txt\n",
         "!pip install tensorboardX"
       ]
@@ -554,7 +554,7 @@
         "id": "FAcGrT3PhY3T"
       },
       "source": [
-        "## Step 3: Generate input data for inference based on uploaded audio `Avy/examples/*.wav`"
+        "## Step 3: Generate input data for inference based on uploaded audio `avy/examples/*.wav`"
       ]
     },
     {
